--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "CyberHazard",
   "license": "MIT",
   "scripts": {
-    "dev": "$(npm bin)/gulp & $(npm bin)/browser-sync start -s ./dest -f ./dest"
+    "dev": "$(npm bin)/gulp & $(npm bin)/browser-sync start -s ./dest -f ./dest",
+    "blocks": "node ./make-blocks.js"
   },
   "dependencies": {
     "babel-cli": "^6.26.0",
